--- a/web/mavzu7.html
+++ b/web/mavzu7.html
@@ -31,50 +31,50 @@ h1, h3 {
   margin-bottom:10px;
 }
 
-.test-btn {
-  display:block;
-  width:100%;
-  padding:16px;
-  margin:10px 0;
-  border:none;
-  border-radius:14px;
-  font-size:18px;
-  font-weight:bold;
-  color:white;
-  cursor:pointer;
-  background: linear-gradient(45deg,#f97316,#7c3aed);
-  transition:0.3s;
-}
-
-.test-btn:hover {
-  transform:scale(1.02);
+.test-btn:hover{
+  transform:scale(1.03);
   opacity:0.9;
 }
 
-.result {
+/* NATIJA */
+.result{
   margin-top:10px;
   font-size:18px;
   font-weight:bold;
-  min-height: 24px;
 }
 
-.true {
+.true{
   color:#22c55e;
 }
 
-.false {
+.false{
   color:#ef4444;
 }
 
-#final-score {
+/* UMUMIY NATIJA */
+#final-score{
   font-size:24px;
   text-align:center;
   margin-top:20px;
-  color:#3b82f6;
-  font-weight: bold;
+  display:none;
 }
 
-.back-btn {
+.result-btn{
+  display:block;
+  width:100%;
+  margin:20px 0;
+  padding:16px;
+  font-size:18px;
+  border-radius:14px;
+  text-align:center;
+  font-weight:bold;
+  color:white;
+  border:none;
+  background: linear-gradient(90deg,#2563eb,#1d4ed8);
+  cursor:pointer;
+}
+
+.back-btn{
   display:block;
   width:100%;
   margin:10px 0;
@@ -91,31 +91,11 @@ h1, h3 {
   transition:0.3s;
 }
 
-.result-btn {
-  display:block;
-  width:100%;
-  margin:20px 0 10px 0;
-  padding:16px;
-  font-size:18px;
-  border-radius:14px;
-  text-align:center;
-  font-weight:bold;
-  color:white;
-  cursor:pointer;
-  border:none;
-  background:linear-gradient(90deg,#3b82f6,#2563eb);
-  box-shadow:0 8px 25px rgba(0,0,0,0.5);
-  transition:0.3s;
-}
-
-.back-btn:hover, .result-btn:hover {
-  transform:scale(1.02);
+.back-btn:hover{
+  transform:scale(1.03);
   opacity:0.9;
 }
 
-.option-selected {
-  border: 2px solid white;
-}
 </style>
 </head>
 
@@ -257,37 +237,34 @@ const answers = {
 
 let userAnswers = {};
 
-function check(qNum, choice, btn) {
-  // Tanlovni saqlash
+function check(qNum, choice) {
   userAnswers[qNum] = choice;
-  
-  // Tugma vizual effektini o'zgartirish
-  const parent = btn.parentElement;
-  const buttons = parent.querySelectorAll('.test-btn');
-  buttons.forEach(b => b.style.border = "none");
-  btn.style.border = "3px solid white";
+  const resDiv = document.getElementById('res' + qNum);
+
+  if(choice === answers[qNum]) {
+    resDiv.innerHTML = "To'g'ri!";
+    resDiv.className = "result true";
+  } else {
+    resDiv.innerHTML = "Xato!";
+    resDiv.className = "result false";
+  }
 }
 
-function showFinalResult() {
-  let correctCount = 0;
-  let total = 10;
+function showResults() {
+  let correct = 0;
+  let incorrect = 0;
 
-  for (let i = 1; i <= total; i++) {
-    const resDiv = document.getElementById('r' + i);
-    if (userAnswers[i] === answers[i]) {
-      resDiv.innerHTML = "To'g'ri!";
-      resDiv.className = "result true";
-      correctCount++;
+  for(let i=1; i<=10; i++) {
+    if(userAnswers[i] === answers[i]) {
+      correct++;
     } else {
-      resDiv.innerHTML = "Xato! To'g'ri javob: " + answers[i];
-      resDiv.className = "result false";
+      incorrect++;
     }
   }
 
-  const finalScoreDiv = document.getElementById('final-score');
-  finalScoreDiv.innerHTML = "Natija: " + total + " tadan " + correctCount + " ta to'g'ri";
-  
-  // Sahifani natijaga qarab pastga tushirish
+  const finalDiv = document.getElementById('final-score');
+  finalDiv.style.display = "block";
+  finalDiv.innerHTML = "To'g'ri: <span class='true'>" + correct + "</span> | Xato: <span class='false'>" + incorrect + "</span>";
   window.scrollTo(0, document.body.scrollHeight);
 }
 </script>
